--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,78 +2,42 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body {
   font-family: "Open Sans", sans-serif;
 }
-header {
+.header {
   padding: 0.5rem;
   background: #383c3d;
   position: sticky;
   top: 0;
   z-index: 1;
 }
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../img/Fondoinicio.jpg");
+  height: 30%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding: 50vh;
+}
 
-.col {
-  width: 100%;
-}
-.row {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
 .row__reverse {
   flex-direction: row-reverse;
 }
 .row__up {
   align-items: flex-start;
 }
-.container {
-  width: 90%;
-  margin: 0 auto;
-  max-width: 1350px;
-}
-.baner {
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  position: relative;
-  padding-top: 250px;
-  background-repeat: no-repeat;
-  text-align: center;
-  opacity: 0.8;
-}
-
-.baner__h1 {
+.banner__h1 {
   font-size: 60px;
-  color: black;
 }
 .baner__h5 {
-  text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   color: #2b9f2b;
 }
-.title {
-  font-size: 60px;
-  color: #2b9f2b;
-  text-align: center;
-}
-.grid__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 3rem;
-  justify-items: center;
-}
-.item__h3 {
-  text-align: center;
-  font-size: 30px;
-  padding: 10vh;
-}
+
 .item__img {
-  justify-self: center;
-  width: 200px;
-  margin-bottom: 2rem;
+  width: 150px;
 }
 .informacion {
   line-height: 2;
@@ -83,14 +47,9 @@ header {
   color: #2b9f2b;
   font-size: 25px;
 }
-.informacion__p {
-  padding-bottom: 10vh;
-  width: 90%;
-}
-
 .informacion__img {
-  width: 90%;
-  padding-top: 10vh;
+  width: 100%;
+  height: 20%;
 }
 .form {
   line-height: 2rem;
@@ -141,19 +100,10 @@ header {
   border: none;
 }
 .logo {
-  width: 30%;
-}
-.nav__ul {
-  list-style-type: none;
-  display: flex;
-}
-.nav__li {
-  margin: 0 0 0 1.5rem;
+  width: 20%;
 }
 .nav__a {
-  text-decoration: none;
   color: #2b9f2b;
-  text-transform: uppercase;
 }
 .footer {
   background: #383c3d;
