--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
 }
+.title {
+  font-size: 40px;
+  color: #2b9f2b;
+  margin-top: 25vh;
+}
 .header {
   padding: 0.5rem;
   background: #383c3d;
@@ -22,12 +27,6 @@
   padding: 50vh;
 }
 
-.row__reverse {
-  flex-direction: row-reverse;
-}
-.row__up {
-  align-items: flex-start;
-}
 .banner__h1 {
   font-size: 60px;
 }
@@ -35,20 +34,15 @@
   font-size: 15px;
   color: #2b9f2b;
 }
-
 .item__img {
   width: 150px;
-}
-.informacion {
-  line-height: 2;
-  padding: 1.5rem;
 }
 .informacion__h4 {
   color: #2b9f2b;
   font-size: 25px;
 }
 .informacion__img {
-  width: 100%;
+  width: 500px;
   height: 20%;
 }
 .form {
@@ -58,13 +52,12 @@
 .form label {
   color: #2b9f2b;
   font-size: 20px;
-  padding-bottom: 2rem;
 }
 .form__input {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
   width: 80%;
-  padding: 15px;
+  padding: 5px;
   box-sizing: border-box;
   background: none;
   outline: none;
@@ -112,17 +105,9 @@
 .footer__h3 {
   color: #2b9f2b;
 }
-.footer__ul {
-  text-align: center;
-}
+
 .footer__li {
   font-size: 3rem;
   color: white;
   padding: 3rem;
-  display: inline-block;
-  text-align: center;
-}
-.footer__p {
-  font-size: 1rem;
-  color: white;
 }
