--- a/CSS/style.css
+++ b/CSS/style.css
@@ -160,4 +160,10 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
+
+.form .form__btn:hover {
+  background: #383c3d;
+  color: #2b9f2b;
+  border: none;
+}
 /*# sourceMappingURL=style.css.map */
