--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,16 +1,15 @@
-$fontsize: 60px;
 .form {
   line-height: 2rem;
   padding-left: 20%;
   label {
     color: #2b9f2b;
-    font-size: ($fontsize)-40;
+    font-size: 20px;
   }
   .form__input {
     font-family: "Open Sans", sans-serif;
-    font-size: ($fontsize/2)-15;
+    font-size: 15px;
     width: 80%;
-    padding: ($fontsize/3)-15;
+    padding: 5px;
     box-sizing: border-box;
     background: none;
     outline: none;
@@ -23,7 +22,7 @@ $fontsize: 60px;
   }
   .form__select {
     font-family: "Open Sans", sans-serif;
-    font-size: ($fontsize/2)-15;
+    font-size: 15px;
     padding: 5px 29%;
     background: none;
     border: 1px solid #2b9f2b;
@@ -31,7 +30,7 @@ $fontsize: 60px;
   .form__btn {
     padding: 5px 20px;
     font-family: "Open Sans", sans-serif;
-    font-size: ($fontsize/2)-15;
+    font-size: 20px;
     background: none;
     border: 1px solid #2b9f2b;
     color: #2b9f2b;
