--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,45 +1,47 @@
+$size: 50px;
+$green: #2b9f2b;
+$black: #383c3d;
 .form {
   line-height: 2rem;
   padding-left: 20%;
   label {
-    color: #2b9f2b;
-    font-size: 20px;
+    color: $green;
+    font-size: $size -30;
   }
   .form__input {
     font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    width: 80%;
+    font-size: ($size/2)-10;
     padding: 5px;
     box-sizing: border-box;
     background: none;
     outline: none;
     resize: none;
     border: none;
-    border-bottom: 1px solid #2b9f2b;
+    border-bottom: 1px solid $green;
   }
   .form__mensaje {
-    border: 1px solid #2b9f2b;
+    border: 1px solid $green;
   }
   .form__select {
     font-family: "Open Sans", sans-serif;
-    font-size: 15px;
+    font-size: ($size/2)-10;
     padding: 5px 29%;
     background: none;
-    border: 1px solid #2b9f2b;
+    border: 1px solid $green;
   }
   .form__btn {
     padding: 5px 20px;
     font-family: "Open Sans", sans-serif;
-    font-size: 20px;
+    font-size: ($size/2)-5;
     background: none;
-    border: 1px solid #2b9f2b;
-    color: #2b9f2b;
+    border: 1px solid $green;
+    color: $green;
     cursor: pointer;
     transition: all 0.3s;
   }
   .form__btn:hover {
-    background: #383c3d;
-    color: #2b9f2b;
+    background: $black;
+    color: $green;
     border: none;
   }
 }
