--- a/scss/_grilla.scss
+++ b/scss/_grilla.scss
@@ -1,3 +1,6 @@
+$size: 100px;
+$green: #2b9f2b;
+$black: #383c3d;
 .banner {
   animation-duration: 2s;
   background-image: linear-gradient(
@@ -17,23 +20,23 @@
 .banner__h1 {
   animation-duration: 2s;
   animation-name: aparecer;
-  font-size: 60px;
+  font-size: $size -40;
 }
 .baner__h5 {
   animation-duration: 2s;
   animation-name: aparecer;
-  font-size: 20px;
-  color: #2b9f2b;
+  font-size: $size/5;
+  color: $green;
 }
 .item__img {
   width: 150px;
 }
 .informacion__h4 {
-  color: #2b9f2b;
-  font-size: 25px;
+  color: $green;
+  font-size: ($size/5)+5;
 }
 .informacion__img {
-  width: 500px;
+  width: $size * 5;
   height: 20%;
 }
 
@@ -41,20 +44,20 @@
   width: 20%;
 }
 .nav__a {
-  color: #2b9f2b;
+  color: $green;
 }
 .nav-item :hover {
   transition: all 0.5s ease-in-out;
   color: white;
 }
 .title {
-  font-size: 40px;
-  color: #2b9f2b;
+  font-size: ($size/2)-10;
+  color: $green;
   margin-top: 25vh;
 }
 .header {
   padding: 0.5rem;
-  background: #383c3d;
+  background: $black;
   position: sticky;
   top: 0;
   z-index: 1;
