--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,14 +123,16 @@
   font-size: 20px;
 }
 
-.form .form__input {
+.form .form__extend, .form .form__input, .form .form__mensaje, .form .form__select, .form .form__btn {
   font-family: "Open Sans", sans-serif;
+  background: none;
+}
+
+.form .form__input {
   font-size: 15px;
-  width: 80%;
   padding: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: none;
   outline: none;
   resize: none;
   border: none;
@@ -142,18 +144,14 @@
 }
 
 .form .form__select {
-  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   padding: 5px 29%;
-  background: none;
   border: 1px solid #2b9f2b;
 }
 
 .form .form__btn {
   padding: 5px 20px;
-  font-family: "Open Sans", sans-serif;
   font-size: 15px;
-  background: none;
   border: 1px solid #2b9f2b;
   color: #2b9f2b;
   cursor: pointer;
