--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -6,33 +6,35 @@ $fontsize: 60px;
     color: #2b9f2b;
     font-size: ($fontsize)-40;
   }
-  .form__input {
+  .form__extend{
     font-family: "Open Sans", sans-serif;
+    background: none;
+
+  }
+  .form__input {
+    @extend .form__extend;
     font-size: ($fontsize/2)-15;
-    width: 80%;
     padding: ($fontsize/3)-15;
     box-sizing: border-box;
-    background: none;
     outline: none;
     resize: none;
     border: none;
     border-bottom: 1px solid $green;
   }
   .form__mensaje {
+    @extend .form__extend;
     border: 1px solid $green;
   }
   .form__select {
-    font-family: "Open Sans", sans-serif;
+    @extend .form__extend;
     font-size: ($fontsize/2)-15;
     padding: 5px 29%;
-    background: none;
     border: 1px solid $green;
   }
   .form__btn {
+    @extend .form__extend;
     padding: 5px 20px;
-    font-family: "Open Sans", sans-serif;
     font-size: ($fontsize/2)-15;
-    background: none;
     border: 1px solid $green;
     color: $green;
     cursor: pointer;
