comentarios de estilos

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,7 @@
+/* ASIGNACION DE VARIABLES */
 $black: #383c3d;
 $green: #2b9f2b;
+/* ESTILO DE FOOTER */
 .footer {
   background: $black;
   padding: 1rem;
