--- a/scss/_grilla.scss
+++ b/scss/_grilla.scss
@@ -1,6 +1,8 @@
+/* ASIGNACION DE VARIABLES */
 $size: 100px;
 $green: #2b9f2b;
 $black: #383c3d;
+/* ESTILOS PERZONALIZADOS EN LOS DIFERENTES HTML  */
 .banner {
   animation-duration: 2s;
   background-image: linear-gradient(
