--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,13 +4,14 @@ $green: #2b9f2b;
 /* ESTILO DE FOOTER */
 .footer {
   background: $black;
-  padding: 1rem;
   .footer__h3 {
     color: $green;
   }
   .footer__li {
     font-size: 3rem;
     color: white;
-    padding: 3rem;
+  }
+  p {
+    margin-bottom: 0%;
   }
 }
