--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,40 +1,41 @@
 /* ASIGNACION DE VARIABLES */
 $fontsize: 60px;
-
+/*ESTILOS DE FORMULARIO*/
 .form {
   line-height: 2rem;
-  padding-left: 20%;
+  justify-content: center;
   label {
     color: #2b9f2b;
     font-size: ($fontsize)-40;
   }
-  .form__input {
+  .form__extend {
     font-family: "Open Sans", sans-serif;
+    background: none;
+  }
+  .form__input {
+    @extend .form__extend;
     font-size: ($fontsize/2)-15;
-    width: 80%;
     padding: ($fontsize/3)-15;
     box-sizing: border-box;
-    background: none;
     outline: none;
     resize: none;
     border: none;
     border-bottom: 1px solid $green;
   }
   .form__mensaje {
+    @extend .form__extend;
     border: 1px solid $green;
   }
   .form__select {
-    font-family: "Open Sans", sans-serif;
+    @extend .form__extend;
     font-size: ($fontsize/2)-15;
     padding: 5px 29%;
-    background: none;
     border: 1px solid $green;
   }
   .form__btn {
+    @extend .form__extend;
     padding: 5px 20px;
-    font-family: "Open Sans", sans-serif;
     font-size: ($fontsize/2)-15;
-    background: none;
     border: 1px solid $green;
     color: $green;
     cursor: pointer;
